tests/impl-corpus/corpus/reject/r_impl_no_body.pdx
// Issue #658: paideia-as Phase 4 m9-004 — impl blocks
// AC 9: impl without body should fail parsing

impl Foo
